@@ -3,6 +3,7 @@ Version 0.7.2     unreleased
 	* Remove `__all__ = []` from __init__.py.
 	* Upgrade to poetry-dynamic-versioning v1.9.1 for minor fixes.
 	* Add Sphinx configuration path to .readthedocs.yml.
+	* Version profiles_settings.xml to control PyCharm inspection profile.
 	* Adjust GHA build process to allow builds for stacked PRs.
 	* Add a new `run clean` target to clean up generated data.
 	* Move unit tests from `tests` into `src/tests/smartapp`.
